--- a/alertmanager.yml
+++ b/alertmanager.yml
@@ -31,6 +31,6 @@ receivers:
       # bot_token: 'xxxxxxxxxxxxxxxxxxxxxxxxx'
       # send_resolved: true
   webhook_configs:
-    # - url: 'http://telegram-webhook:8080/alert'
-    - url: 'http://172.16.91.30:8080/alert'
+    - url: 'http://telegram-webhook:8080/alert'
+    # - url: 'http://172.16.91.30:8080/alert'
       send_resolved: true
